--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "daisyui": "^5.5.14",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
